--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,11 @@
+
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+
 @import "tailwindcss";
 
+@theme {
+  --font-raleway: "Raleway", sans-serif;
+}
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -10,17 +16,21 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --hero-section: calc(100vh - 56px);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    --color-primary: #2BADAD;
+    --color-primary-2:#2BADAD;
+  --title-color: linear-gradient(to right, #59A8A8, #00FF51);
+    --background: #121212;
+    --foreground: #fff;
+    --primary-2: #00FFFF;
+}
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
 }
