header base design

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,6 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
 
 @import "tailwindcss";
 
@@ -23,7 +24,7 @@
   :root {
     --color-primary: #2BADAD;
     --color-primary-2:#2BADAD;
-  --title-color: linear-gradient(to right, #59A8A8, #00FF51);
+    --title-color: linear-gradient(to right, #59A8A8, #00FF51);
     --background: #121212;
     --foreground: #fff;
     --primary-2: #00FFFF;
