--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 @import "tailwindcss";
 
@@ -22,8 +23,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --color-primary: #2BADAD;
-    --color-primary-2:#2BADAD;
+    --color-primary: #2BADAD; 
     --title-color: linear-gradient(to right, #59A8A8, #00FF51);
     --background: #121212;
     --foreground: #fff;
