--- a/app/globals.css
+++ b/app/globals.css
@@ -9,7 +9,7 @@
   --font-raleway: "Raleway", sans-serif;
 }
 :root {
-  --background: #FFF5EE;
+  --background: #FAFAFA;
   --foreground: #171717;
   --color-primary: #2BADAD; 
   --title-color: linear-gradient(to right, #59A8A8, #00FF51);
