--- a/app/globals.css
+++ b/app/globals.css
@@ -16,9 +16,10 @@
   --primary-2: #1e1e1e;
   --hover-grey:#BFBFBF;
   --hero-background:linear-gradient(295deg, #ffffff, #36ade930);
-  --color-hero-from:#d2d6d5;
-  --color-hero-to: #008080;
+  --color-hero-from:#c0c0c0;
+  --color-hero-to: #44857e;
   --name-height-light: #FFDAB9;
+  --input-background:#757575;
 }
 
 @theme inline {
@@ -39,6 +40,7 @@
     --hover-grey:#BFBFBF; 
   --hero-background:#121212; 
   --name-height-light: var(--primary-2);
+  --input-background:#757575;
 }
 }
 
